# ai-invention-276cb0-flickering-before-failing-ecological-cri

./: README.md
dataset_iter1_graph_coloring/demo/: data_code_demo.ipynb  demo_result.json  mini_demo_data.json
dataset_iter1_graph_coloring/src/: data.py  data_out.json  full_data_out.json  generate_dataset.py  mini_data_out.json  preview_data_out.json  pyproject.toml
dataset_iter1_multi_hop_factu/demo/: data_code_demo.ipynb  demo_result.json  mini_demo_data.json
dataset_iter1_multi_hop_factu/src/: build_dataset.py  data.py  data_out.json  full_data_out.json  mini_data_out.json  preview_data_out.json  pyproject.toml
dataset_iter1_multi_step_arit/demo/: data_code_demo.ipynb  demo_result.json  mini_demo_data.json
dataset_iter1_multi_step_arit/src/: data.py  data_out.json  generate_dataset.py  pyproject.toml  schema.json
dataset_iter1_syllogistic_ded/demo/: data_code_demo.ipynb  demo_result.json  mini_demo_data.json
dataset_iter1_syllogistic_ded/src/: data.py  data_out.json  full_data_out.json  mini_data_out.json  pyproject.toml
dataset_iter3_extend_syllogis/demo/: data_code_demo.ipynb  demo_result.json  mini_demo_data.json
dataset_iter3_extend_syllogis/src/: data.py  data_out.json  mini_data_out.json  preview_data_out.json  pyproject.toml
evaluation_iter3_cross_task_csd/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter3_cross_task_csd/src/: eval.py  eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter4_consolidated_cs/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter4_consolidated_cs/src/: eval.py  method_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter5_cross_task_csd/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter5_cross_task_csd/src/: eval.py  full_eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter5_definitive_stat/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter5_definitive_stat/src/: eval.py  eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter5_prospective_csd/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter5_prospective_csd/src/: eval.py  eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter5_publication_qua/demo/: demo_result.json  eval_code_demo.ipynb
evaluation_iter5_publication_qua/src/: eval.py  full_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter6_compile_neurips/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter6_compile_neurips/src/: eval.py  full_eval_out.json  mini_eval_out.json  neurips_template.sty  paper.aux  paper.bbl  paper.blg  paper.out  paper.tex  pyproject.toml  references.bib
evaluation_iter6_csd_based_model/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter6_csd_based_model/src/: eval.py  eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter6_csd_predictive/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter6_csd_predictive/src/: eval.py  full_eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter6_regenerate_8_pu/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter6_regenerate_8_pu/src/: eval.py  full_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter7_manuscript_v2_q/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter7_manuscript_v2_q/src/: eval.py  full_eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter7_neurips_2026_pa/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter7_neurips_2026_pa/src/: eval.py  mini_eval_out.json  neurips_template.sty  paper.aux  paper.bbl  paper.blg  paper.out  paper.tex  pyproject.toml  references.bib
evaluation_iter7_supplementary_m/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter7_supplementary_m/src/: eval.py  full_eval_out.json  mini_eval_out.json  supplementary.aux  supplementary.out  supplementary.tex  supplementary.toc
experiment_iter2_csd_sampling_ex/demo/: demo_result.json  method_code_demo.ipynb
experiment_iter2_csd_sampling_ex/src/: method.py  mini_data_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter2_graph_coloring/demo/: demo_result.json  method_code_demo.ipynb  mini_demo_data.json
experiment_iter2_graph_coloring/src/: method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter2_multi_hop_factu/demo/: demo_result.json  method_code_demo.ipynb  mini_demo_data.json
experiment_iter2_multi_hop_factu/src/: full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter2_syllogistic_log/demo/: demo_result.json  method_code_demo.ipynb  mini_demo_data.json
experiment_iter2_syllogistic_log/src/: method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter3_csd_early_warni/demo/: demo_result.json  method_code_demo.ipynb  mini_demo_data.json
experiment_iter3_csd_early_warni/src/: full_method_out.json  method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter3_temperature_dep/demo/: demo_result.json  method_code_demo.ipynb  mini_demo_data.json
experiment_iter3_temperature_dep/src/: full_data_out.json  full_method_out.json  method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter4_mixture_cusp_dd/demo/: demo_result.json  method_code_demo.ipynb  mini_demo_data.json
experiment_iter4_spuq_baseline_i/src/: method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter4_syllogistic_csd/src/: method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
(+29 files in other folders)
