[project]
name = "syllogistic-logic-dataset"
version = "1.0.0"
requires-python = ">=3.10,<3.12"
description = "Synthetic syllogistic deductive logic dataset with parameterized premise-count difficulty, Z3-verified ground truth"
dependencies = [
    "z3-solver==4.16.0.0",
    "numpy==2.2.6",
    "loguru==0.7.3",
]
