[project]
name = "csd-eval"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
dependencies = [
    "joblib==1.5.3",
    "loguru==0.7.3",
    "numpy==2.4.3",
    "psutil==7.2.2",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "threadpoolctl==3.6.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends._legacy:_Backend"
