[project]
name = "csd-llm-eval-figures"
version = "0.1.0"
description = "Evaluation script generating 8 publication-quality figures for CSD-LLM NeurIPS paper"
requires-python = ">=3.10,<3.12"

dependencies = [
    "matplotlib==3.10.8",
    "seaborn==0.13.2",
    "numpy==2.2.6",
    "scipy==1.15.3",
    "scikit-learn==1.7.2",
    "loguru==0.7.3",
    "pillow==12.1.1",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "fonttools==4.61.1",
    "kiwisolver==1.4.9",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "packaging==26.0",
    "joblib==1.5.3",
    "threadpoolctl==3.6.0",
    "six==1.17.0",
]

[project.optional-dependencies]
umap = [
    "umap-learn",
    "torch",
    "sentence-transformers",
]

[project.scripts]
eval = "eval:main"
