[project]
name = "csd-model-routing-eval"
version = "1.0.0"
requires-python = ">=3.11,<3.12"
description = "CSD-Based Model Routing Simulation: Downstream Value Quantification"
dependencies = [
    "attrs==26.1.0",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "loguru==0.7.3",
    "numpy==2.4.3",
    "referencing==0.37.0",
    "rpds-py==0.30.0",
    "typing-extensions==4.15.0",
]
