[project]
name = "csd-graph-coloring"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
dependencies = [
    "numpy==2.4.3",
    "scipy==1.17.1",
    "scikit-learn==1.8.0",
    "sentence-transformers==5.3.0",
    "diptest==0.10.0",
    "aiohttp==3.13.3",
    "loguru==0.7.3",
    "python-dotenv==1.2.2",
    "tokenizers==0.22.2",
    "transformers==5.3.0",
    "torch==2.10.0",
    "safetensors==0.7.0",
    "huggingface_hub==1.7.1",
    "joblib==1.5.3",
    "threadpoolctl==3.6.0",
    "tqdm==4.67.3",
    "regex==2026.2.28",
    "packaging==26.0",
    "filelock==3.25.2",
    "fsspec==2026.2.0",
    "certifi==2026.2.25",
    "idna==3.11",
    "PyYAML==6.0.3",
]
