[project]
name = "csd-multihop-reasoning"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
dependencies = [
    "diptest==0.10.0",
    "loguru==0.7.3",
    "numpy==2.4.3",
    "pandas==3.0.1",
    "psutil==7.2.2",
    "python-dotenv==1.2.2",
    "requests==2.32.5",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "sentence-transformers==5.3.0",
    "tenacity==9.1.4",
    "torch==2.10.0",
]
