[project]
name = "exp-id1-it4-opus"
version = "1.0.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "anyio==4.12.1",
    "certifi==2026.2.25",
    "diptest==0.10.0",
    "filelock==3.25.2",
    "fsspec==2026.2.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface_hub==1.7.1",
    "idna==3.11",
    "Jinja2==3.1.6",
    "joblib==1.5.3",
    "loguru==0.7.3",
    "MarkupSafe==3.0.3",
    "mpmath==1.3.0",
    "networkx==3.6.1",
    "numpy==2.4.3",
    "packaging==26.0",
    "psutil==7.2.2",
    "PyYAML==6.0.3",
    "regex==2026.2.28",
    "safetensors==0.7.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "sentence-transformers==5.3.0",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.2",
    "torch==2.10.0",
    "tqdm==4.67.3",
    "transformers==5.3.0",
    "typing_extensions==4.15.0",
]
